bugfix for long feed names on mobile

--- a/theme/default/assets/css/global.css
+++ b/theme/default/assets/css/global.css
@@ -583,6 +583,18 @@ ul.feeds-list {
 		margin-top: 1em;
 	}
 
+	ul.feeds-list li {
+		overflow-wrap: break-word;
+		word-wrap: break-word;
+		-ms-word-break: break-all;
+		word-break: break-all;
+		word-break: break-word;
+		-ms-hyphens: auto;
+		-moz-hyphens: auto;
+		-webkit-hyphens: auto;
+		hyphens: auto;
+	}
+
 #micropub-form {
 
 }
